Add source-repository to cabal.

--- a/typst-symbols.cabal
+++ b/typst-symbols.cabal
@@ -14,6 +14,10 @@ category:           Text
 build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 
+source-repository head
+  type:       git
+  location:   https://github.com/jgm/typst-symbols
+
 common warnings
     ghc-options: -Wall
 
@@ -21,6 +25,6 @@ library
     import:           warnings
     exposed-modules:  Typst.Symbols
                       Typst.Emoji
-    build-depends:    base ^>=4.17.0.0, text
+    build-depends:    base ^>=4.17.0.0, text >= 1.0 && < 2.1
     hs-source-dirs:   src
     default-language: Haskell2010
