--- a/typst-symbols.cabal
+++ b/typst-symbols.cabal
@@ -25,6 +25,6 @@ library
     import:           warnings
     exposed-modules:  Typst.Symbols
                       Typst.Emoji
-    build-depends:    base ^>=4.17.0.0, text >= 1.0 && < 2.1
+    build-depends:    base >= 4.12 && < 4.18, text >= 1.0 && < 2.1
     hs-source-dirs:   src
     default-language: Haskell2010
