Add Typst.Shorthands with scraped shorthand table.

--- a/typst-symbols.cabal
+++ b/typst-symbols.cabal
@@ -24,6 +24,7 @@ common warnings
 library
     import:           warnings
     exposed-modules:  Typst.Symbols
+                      Typst.Shorthands
                       Typst.Emoji
     build-depends:    base >= 4.12 && < 5,
                       text >= 1.0 && < 2.1
